spl.output
Grammar

    0 $accept: program $end

    1 program: block "."

    2 block: "begin" constDecls varDecls procDecls stmts "end"

    3 blockStmt: block

    4 empty: ε

    5 constDecls: empty
    6           | constDecls constDecl

    7 constDecl: "const" constDefList ";"

    8 constDefList: constDef
    9             | constDefList "," constDef

   10 constDef: identsym "=" numbersym

   11 varDecls: empty
   12         | varDecls varDecl

   13 varDecl: "var" identList ";"

   14 identList: identsym
   15          | identList "," identsym

   16 procDecls: empty
   17          | procDecls procDecl

   18 procDecl: "proc" identsym block ";"

   19 stmts: empty
   20      | stmtList

   21 stmtList: stmt
   22         | stmtList ";" stmt

   23 stmt: assignStmt
   24     | callStmt
   25     | ifStmt
   26     | whileStmt
   27     | readStmt
   28     | printStmt
   29     | blockStmt

   30 assignStmt: identsym ":=" expr

   31 callStmt: "call" identsym

   32 ifStmt: "if" condition "then" stmts "else" stmts "end"
   33       | "if" condition "then" stmts "end"

   34 whileStmt: "while" condition "do" stmts "end"

   35 readStmt: "read" identsym

   36 printStmt: "print" expr

   37 condition: dbCondition
   38          | relOpCondition

   39 dbCondition: "divisible" expr "by" expr

   40 relOpCondition: expr relOp expr

   41 relOp: "=="
   42      | "!="
   43      | "<"
   44      | ">"
   45      | "<="
   46      | ">="

   47 expr: term
   48     | expr "+" term
   49     | expr "-" term

   50 term: factor
   51     | term "*" factor
   52     | term "/" factor

   53 sign: "-"
   54     | "+"

   55 factor: sign factor
   56       | "(" expr ")"
   57       | numbersym
   58       | identsym


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    identsym <ident> (258) 10 14 15 18 30 31 35 58
    numbersym <number> (259) 10 57
    "+" <token> (260) 48 54
    "-" <token> (261) 49 53
    "*" <token> (262) 51
    "/" <token> (263) 52
    "." <token> (264) 1
    ";" <token> (265) 7 13 18 22
    "=" <token> (266) 10
    "," <token> (267) 9 15
    ":=" <token> (268) 30
    "(" <token> (269) 56
    ")" <token> (270) 56
    "const" <token> (271) 7
    "var" <token> (272) 13
    "proc" <token> (273) 18
    "call" <token> (274) 31
    "begin" <token> (275) 2
    "end" <token> (276) 2 32 33 34
    "if" <token> (277) 32 33
    "then" <token> (278) 32 33
    "else" <token> (279) 32
    "while" <token> (280) 34
    "do" <token> (281) 34
    "read" <token> (282) 35
    "print" <token> (283) 36
    "divisible" <token> (284) 39
    "by" <token> (285) 39
    "==" <token> (286) 41
    "!=" <token> (287) 42
    "<" <token> (288) 43
    "<=" <token> (289) 45
    ">" <token> (290) 44
    ">=" <token> (291) 46


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    program <block> (38)
        on left: 1
        on right: 0
    block <block> (39)
        on left: 2
        on right: 1 3 18
    blockStmt <block_stmt> (40)
        on left: 3
        on right: 29
    empty <empty> (41)
        on left: 4
        on right: 5 11 16 19
    constDecls <const_decls> (42)
        on left: 5 6
        on right: 2 6
    constDecl <const_decl> (43)
        on left: 7
        on right: 6
    constDefList <const_def_list> (44)
        on left: 8 9
        on right: 7 9
    constDef <const_def> (45)
        on left: 10
        on right: 8 9
    varDecls <var_decls> (46)
        on left: 11 12
        on right: 2 12
    varDecl <var_decl> (47)
        on left: 13
        on right: 12
    identList <ident_list> (48)
        on left: 14 15
        on right: 13 15
    procDecls <proc_decls> (49)
        on left: 16 17
        on right: 2 17
    procDecl <proc_decl> (50)
        on left: 18
        on right: 17
    stmts <stmts> (51)
        on left: 19 20
        on right: 2 32 33 34
    stmtList <stmt_list> (52)
        on left: 21 22
        on right: 20 22
    stmt <stmt> (53)
        on left: 23 24 25 26 27 28 29
        on right: 21 22
    assignStmt <assign_stmt> (54)
        on left: 30
        on right: 23
    callStmt <call_stmt> (55)
        on left: 31
        on right: 24
    ifStmt <if_stmt> (56)
        on left: 32 33
        on right: 25
    whileStmt <while_stmt> (57)
        on left: 34
        on right: 26
    readStmt <read_stmt> (58)
        on left: 35
        on right: 27
    printStmt <print_stmt> (59)
        on left: 36
        on right: 28
    condition <condition> (60)
        on left: 37 38
        on right: 32 33 34
    dbCondition <db_condition> (61)
        on left: 39
        on right: 37
    relOpCondition <rel_op_condition> (62)
        on left: 40
        on right: 38
    relOp <token> (63)
        on left: 41 42 43 44 45 46
        on right: 40
    expr <expr> (64)
        on left: 47 48 49
        on right: 30 36 39 40 48 49 56
    term <expr> (65)
        on left: 50 51 52
        on right: 47 48 49 51 52
    sign <token> (66)
        on left: 53 54
        on right: 55
    factor <expr> (67)
        on left: 55 56 57 58
        on right: 50 51 52 55


State 0

    0 $accept: • program $end

    "begin"  shift, and go to state 1

    program  go to state 2
    block    go to state 3


State 1

    2 block: "begin" • constDecls varDecls procDecls stmts "end"

    $default  reduce using rule 4 (empty)

    empty       go to state 4
    constDecls  go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: block • "."

    "."  shift, and go to state 7


State 4

    5 constDecls: empty •

    $default  reduce using rule 5 (constDecls)


State 5

    2 block: "begin" constDecls • varDecls procDecls stmts "end"
    6 constDecls: constDecls • constDecl

    "const"  shift, and go to state 8

    $default  reduce using rule 4 (empty)

    empty      go to state 9
    constDecl  go to state 10
    varDecls   go to state 11


State 6

    0 $accept: program $end •

    $default  accept


State 7

    1 program: block "." •

    $default  reduce using rule 1 (program)


State 8

    7 constDecl: "const" • constDefList ";"

    identsym  shift, and go to state 12

    constDefList  go to state 13
    constDef      go to state 14


State 9

   11 varDecls: empty •

    $default  reduce using rule 11 (varDecls)


State 10

    6 constDecls: constDecls constDecl •

    $default  reduce using rule 6 (constDecls)


State 11

    2 block: "begin" constDecls varDecls • procDecls stmts "end"
   12 varDecls: varDecls • varDecl

    "var"  shift, and go to state 15

    $default  reduce using rule 4 (empty)

    empty      go to state 16
    varDecl    go to state 17
    procDecls  go to state 18


State 12

   10 constDef: identsym • "=" numbersym

    "="  shift, and go to state 19


State 13

    7 constDecl: "const" constDefList • ";"
    9 constDefList: constDefList • "," constDef

    ";"  shift, and go to state 20
    ","  shift, and go to state 21


State 14

    8 constDefList: constDef •

    $default  reduce using rule 8 (constDefList)


State 15

   13 varDecl: "var" • identList ";"

    identsym  shift, and go to state 22

    identList  go to state 23


State 16

   16 procDecls: empty •

    $default  reduce using rule 16 (procDecls)


State 17

   12 varDecls: varDecls varDecl •

    $default  reduce using rule 12 (varDecls)


State 18

    2 block: "begin" constDecls varDecls procDecls • stmts "end"
   17 procDecls: procDecls • procDecl

    identsym  shift, and go to state 24
    "proc"    shift, and go to state 25
    "call"    shift, and go to state 26
    "begin"   shift, and go to state 1
    "if"      shift, and go to state 27
    "while"   shift, and go to state 28
    "read"    shift, and go to state 29
    "print"   shift, and go to state 30

    $default  reduce using rule 4 (empty)

    block       go to state 31
    blockStmt   go to state 32
    empty       go to state 33
    procDecl    go to state 34
    stmts       go to state 35
    stmtList    go to state 36
    stmt        go to state 37
    assignStmt  go to state 38
    callStmt    go to state 39
    ifStmt      go to state 40
    whileStmt   go to state 41
    readStmt    go to state 42
    printStmt   go to state 43


State 19

   10 constDef: identsym "=" • numbersym

    numbersym  shift, and go to state 44


State 20

    7 constDecl: "const" constDefList ";" •

    $default  reduce using rule 7 (constDecl)


State 21

    9 constDefList: constDefList "," • constDef

    identsym  shift, and go to state 12

    constDef  go to state 45


State 22

   14 identList: identsym •

    $default  reduce using rule 14 (identList)


State 23

   13 varDecl: "var" identList • ";"
   15 identList: identList • "," identsym

    ";"  shift, and go to state 46
    ","  shift, and go to state 47


State 24

   30 assignStmt: identsym • ":=" expr

    ":="  shift, and go to state 48


State 25

   18 procDecl: "proc" • identsym block ";"

    identsym  shift, and go to state 49


State 26

   31 callStmt: "call" • identsym

    identsym  shift, and go to state 50


State 27

   32 ifStmt: "if" • condition "then" stmts "else" stmts "end"
   33       | "if" • condition "then" stmts "end"

    identsym     shift, and go to state 51
    numbersym    shift, and go to state 52
    "+"          shift, and go to state 53
    "-"          shift, and go to state 54
    "("          shift, and go to state 55
    "divisible"  shift, and go to state 56

    condition       go to state 57
    dbCondition     go to state 58
    relOpCondition  go to state 59
    expr            go to state 60
    term            go to state 61
    sign            go to state 62
    factor          go to state 63


State 28

   34 whileStmt: "while" • condition "do" stmts "end"

    identsym     shift, and go to state 51
    numbersym    shift, and go to state 52
    "+"          shift, and go to state 53
    "-"          shift, and go to state 54
    "("          shift, and go to state 55
    "divisible"  shift, and go to state 56

    condition       go to state 64
    dbCondition     go to state 58
    relOpCondition  go to state 59
    expr            go to state 60
    term            go to state 61
    sign            go to state 62
    factor          go to state 63


State 29

   35 readStmt: "read" • identsym

    identsym  shift, and go to state 65


State 30

   36 printStmt: "print" • expr

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 55

    expr    go to state 66
    term    go to state 61
    sign    go to state 62
    factor  go to state 63


State 31

    3 blockStmt: block •

    $default  reduce using rule 3 (blockStmt)


State 32

   29 stmt: blockStmt •

    $default  reduce using rule 29 (stmt)


State 33

   19 stmts: empty •

    $default  reduce using rule 19 (stmts)


State 34

   17 procDecls: procDecls procDecl •

    $default  reduce using rule 17 (procDecls)


State 35

    2 block: "begin" constDecls varDecls procDecls stmts • "end"

    "end"  shift, and go to state 67


State 36

   20 stmts: stmtList •
   22 stmtList: stmtList • ";" stmt

    ";"  shift, and go to state 68

    $default  reduce using rule 20 (stmts)


State 37

   21 stmtList: stmt •

    $default  reduce using rule 21 (stmtList)


State 38

   23 stmt: assignStmt •

    $default  reduce using rule 23 (stmt)


State 39

   24 stmt: callStmt •

    $default  reduce using rule 24 (stmt)


State 40

   25 stmt: ifStmt •

    $default  reduce using rule 25 (stmt)


State 41

   26 stmt: whileStmt •

    $default  reduce using rule 26 (stmt)


State 42

   27 stmt: readStmt •

    $default  reduce using rule 27 (stmt)


State 43

   28 stmt: printStmt •

    $default  reduce using rule 28 (stmt)


State 44

   10 constDef: identsym "=" numbersym •

    $default  reduce using rule 10 (constDef)


State 45

    9 constDefList: constDefList "," constDef •

    $default  reduce using rule 9 (constDefList)


State 46

   13 varDecl: "var" identList ";" •

    $default  reduce using rule 13 (varDecl)


State 47

   15 identList: identList "," • identsym

    identsym  shift, and go to state 69


State 48

   30 assignStmt: identsym ":=" • expr

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 55

    expr    go to state 70
    term    go to state 61
    sign    go to state 62
    factor  go to state 63


State 49

   18 procDecl: "proc" identsym • block ";"

    "begin"  shift, and go to state 1

    block  go to state 71


State 50

   31 callStmt: "call" identsym •

    $default  reduce using rule 31 (callStmt)


State 51

   58 factor: identsym •

    $default  reduce using rule 58 (factor)


State 52

   57 factor: numbersym •

    $default  reduce using rule 57 (factor)


State 53

   54 sign: "+" •

    $default  reduce using rule 54 (sign)


State 54

   53 sign: "-" •

    $default  reduce using rule 53 (sign)


State 55

   56 factor: "(" • expr ")"

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 55

    expr    go to state 72
    term    go to state 61
    sign    go to state 62
    factor  go to state 63


State 56

   39 dbCondition: "divisible" • expr "by" expr

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 55

    expr    go to state 73
    term    go to state 61
    sign    go to state 62
    factor  go to state 63


State 57

   32 ifStmt: "if" condition • "then" stmts "else" stmts "end"
   33       | "if" condition • "then" stmts "end"

    "then"  shift, and go to state 74


State 58

   37 condition: dbCondition •

    $default  reduce using rule 37 (condition)


State 59

   38 condition: relOpCondition •

    $default  reduce using rule 38 (condition)


State 60

   40 relOpCondition: expr • relOp expr
   48 expr: expr • "+" term
   49     | expr • "-" term

    "+"   shift, and go to state 75
    "-"   shift, and go to state 76
    "=="  shift, and go to state 77
    "!="  shift, and go to state 78
    "<"   shift, and go to state 79
    "<="  shift, and go to state 80
    ">"   shift, and go to state 81
    ">="  shift, and go to state 82

    relOp  go to state 83


State 61

   47 expr: term •
   51 term: term • "*" factor
   52     | term • "/" factor

    "*"  shift, and go to state 84
    "/"  shift, and go to state 85

    $default  reduce using rule 47 (expr)


State 62

   55 factor: sign • factor

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 55

    sign    go to state 62
    factor  go to state 86


State 63

   50 term: factor •

    $default  reduce using rule 50 (term)


State 64

   34 whileStmt: "while" condition • "do" stmts "end"

    "do"  shift, and go to state 87


State 65

   35 readStmt: "read" identsym •

    $default  reduce using rule 35 (readStmt)


State 66

   36 printStmt: "print" expr •
   48 expr: expr • "+" term
   49     | expr • "-" term

    "+"  shift, and go to state 75
    "-"  shift, and go to state 76

    $default  reduce using rule 36 (printStmt)


State 67

    2 block: "begin" constDecls varDecls procDecls stmts "end" •

    $default  reduce using rule 2 (block)


State 68

   22 stmtList: stmtList ";" • stmt

    identsym  shift, and go to state 24
    "call"    shift, and go to state 26
    "begin"   shift, and go to state 1
    "if"      shift, and go to state 27
    "while"   shift, and go to state 28
    "read"    shift, and go to state 29
    "print"   shift, and go to state 30

    block       go to state 31
    blockStmt   go to state 32
    stmt        go to state 88
    assignStmt  go to state 38
    callStmt    go to state 39
    ifStmt      go to state 40
    whileStmt   go to state 41
    readStmt    go to state 42
    printStmt   go to state 43


State 69

   15 identList: identList "," identsym •

    $default  reduce using rule 15 (identList)


State 70

   30 assignStmt: identsym ":=" expr •
   48 expr: expr • "+" term
   49     | expr • "-" term

    "+"  shift, and go to state 75
    "-"  shift, and go to state 76

    $default  reduce using rule 30 (assignStmt)


State 71

   18 procDecl: "proc" identsym block • ";"

    ";"  shift, and go to state 89


State 72

   48 expr: expr • "+" term
   49     | expr • "-" term
   56 factor: "(" expr • ")"

    "+"  shift, and go to state 75
    "-"  shift, and go to state 76
    ")"  shift, and go to state 90


State 73

   39 dbCondition: "divisible" expr • "by" expr
   48 expr: expr • "+" term
   49     | expr • "-" term

    "+"   shift, and go to state 75
    "-"   shift, and go to state 76
    "by"  shift, and go to state 91


State 74

   32 ifStmt: "if" condition "then" • stmts "else" stmts "end"
   33       | "if" condition "then" • stmts "end"

    identsym  shift, and go to state 24
    "call"    shift, and go to state 26
    "begin"   shift, and go to state 1
    "if"      shift, and go to state 27
    "while"   shift, and go to state 28
    "read"    shift, and go to state 29
    "print"   shift, and go to state 30

    $default  reduce using rule 4 (empty)

    block       go to state 31
    blockStmt   go to state 32
    empty       go to state 33
    stmts       go to state 92
    stmtList    go to state 36
    stmt        go to state 37
    assignStmt  go to state 38
    callStmt    go to state 39
    ifStmt      go to state 40
    whileStmt   go to state 41
    readStmt    go to state 42
    printStmt   go to state 43


State 75

   48 expr: expr "+" • term

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 55

    term    go to state 93
    sign    go to state 62
    factor  go to state 63


State 76

   49 expr: expr "-" • term

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 55

    term    go to state 94
    sign    go to state 62
    factor  go to state 63


State 77

   41 relOp: "==" •

    $default  reduce using rule 41 (relOp)


State 78

   42 relOp: "!=" •

    $default  reduce using rule 42 (relOp)


State 79

   43 relOp: "<" •

    $default  reduce using rule 43 (relOp)


State 80

   45 relOp: "<=" •

    $default  reduce using rule 45 (relOp)


State 81

   44 relOp: ">" •

    $default  reduce using rule 44 (relOp)


State 82

   46 relOp: ">=" •

    $default  reduce using rule 46 (relOp)


State 83

   40 relOpCondition: expr relOp • expr

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 55

    expr    go to state 95
    term    go to state 61
    sign    go to state 62
    factor  go to state 63


State 84

   51 term: term "*" • factor

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 55

    sign    go to state 62
    factor  go to state 96


State 85

   52 term: term "/" • factor

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 55

    sign    go to state 62
    factor  go to state 97


State 86

   55 factor: sign factor •

    $default  reduce using rule 55 (factor)


State 87

   34 whileStmt: "while" condition "do" • stmts "end"

    identsym  shift, and go to state 24
    "call"    shift, and go to state 26
    "begin"   shift, and go to state 1
    "if"      shift, and go to state 27
    "while"   shift, and go to state 28
    "read"    shift, and go to state 29
    "print"   shift, and go to state 30

    $default  reduce using rule 4 (empty)

    block       go to state 31
    blockStmt   go to state 32
    empty       go to state 33
    stmts       go to state 98
    stmtList    go to state 36
    stmt        go to state 37
    assignStmt  go to state 38
    callStmt    go to state 39
    ifStmt      go to state 40
    whileStmt   go to state 41
    readStmt    go to state 42
    printStmt   go to state 43


State 88

   22 stmtList: stmtList ";" stmt •

    $default  reduce using rule 22 (stmtList)


State 89

   18 procDecl: "proc" identsym block ";" •

    $default  reduce using rule 18 (procDecl)


State 90

   56 factor: "(" expr ")" •

    $default  reduce using rule 56 (factor)


State 91

   39 dbCondition: "divisible" expr "by" • expr

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 55

    expr    go to state 99
    term    go to state 61
    sign    go to state 62
    factor  go to state 63


State 92

   32 ifStmt: "if" condition "then" stmts • "else" stmts "end"
   33       | "if" condition "then" stmts • "end"

    "end"   shift, and go to state 100
    "else"  shift, and go to state 101


State 93

   48 expr: expr "+" term •
   51 term: term • "*" factor
   52     | term • "/" factor

    "*"  shift, and go to state 84
    "/"  shift, and go to state 85

    $default  reduce using rule 48 (expr)


State 94

   49 expr: expr "-" term •
   51 term: term • "*" factor
   52     | term • "/" factor

    "*"  shift, and go to state 84
    "/"  shift, and go to state 85

    $default  reduce using rule 49 (expr)


State 95

   40 relOpCondition: expr relOp expr •
   48 expr: expr • "+" term
   49     | expr • "-" term

    "+"  shift, and go to state 75
    "-"  shift, and go to state 76

    $default  reduce using rule 40 (relOpCondition)


State 96

   51 term: term "*" factor •

    $default  reduce using rule 51 (term)


State 97

   52 term: term "/" factor •

    $default  reduce using rule 52 (term)


State 98

   34 whileStmt: "while" condition "do" stmts • "end"

    "end"  shift, and go to state 102


State 99

   39 dbCondition: "divisible" expr "by" expr •
   48 expr: expr • "+" term
   49     | expr • "-" term

    "+"  shift, and go to state 75
    "-"  shift, and go to state 76

    $default  reduce using rule 39 (dbCondition)


State 100

   33 ifStmt: "if" condition "then" stmts "end" •

    $default  reduce using rule 33 (ifStmt)


State 101

   32 ifStmt: "if" condition "then" stmts "else" • stmts "end"

    identsym  shift, and go to state 24
    "call"    shift, and go to state 26
    "begin"   shift, and go to state 1
    "if"      shift, and go to state 27
    "while"   shift, and go to state 28
    "read"    shift, and go to state 29
    "print"   shift, and go to state 30

    $default  reduce using rule 4 (empty)

    block       go to state 31
    blockStmt   go to state 32
    empty       go to state 33
    stmts       go to state 103
    stmtList    go to state 36
    stmt        go to state 37
    assignStmt  go to state 38
    callStmt    go to state 39
    ifStmt      go to state 40
    whileStmt   go to state 41
    readStmt    go to state 42
    printStmt   go to state 43


State 102

   34 whileStmt: "while" condition "do" stmts "end" •

    $default  reduce using rule 34 (whileStmt)


State 103

   32 ifStmt: "if" condition "then" stmts "else" stmts • "end"

    "end"  shift, and go to state 104


State 104

   32 ifStmt: "if" condition "then" stmts "else" stmts "end" •

    $default  reduce using rule 32 (ifStmt)
